# midapack

./: .bash_profile  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  Makefile.in  README  SConstruct  configure  mkrelease  toeplitz.c  toeplitz.dox  toeplitz_params.c  toeplitz_rshp.c  toeplitz_seq.c  toeplitz_wizard.c
algebra/: CMakeLists.txt  midapack.dox  mkdoc.dox
algebra/html/: alm_8c.js  als_8c_source.html  before__20121123_2toeplitz__block_8c.js  butterfly_8c.html  common_2communication_8c.html  common_2lensing__sub_8c.html  common_2lensing__sub_8c.js  common_2remapping__routines_8c_source.html  common_2write__cls_8c.html  common_2write__healpix__map_8c.html  convolution__ker__B_8c.js  convolution__ker__L_8c.html  convolution__subroutines_8c.html  convolution__subroutines_8c.js  derivatives__nersc_2get__alm_8c.html  derivatives__nersc_2get__alm_8c.js  derivatives__nersc_2lensing__sub_8c.js  derivatives__nersc_2remapping__routines__der_8c.js  derivatives__nersc_2remapping__routines__der_8c_source.html  derivatives__nersc_2write__cls_8c.html  derivatives__nersc_2write__healpix__map_8c.html  dir_047e6a79ec3005ff33af710a2117944f.html  dir_37b90dd4c1aa120b15927da5e6db5faa.html  dir_8fef260a2096467668e67e0165d48090.html  dir_9be02230c9667e2b031126f403294414.html  dir_9cba7731df954499ac1d844977df81e3.html  dir_a3a92a38e8597ccba9093f598aa1280a.html  dir_d99042e9449d4a45ab9103cb51e01429.html  displacement__test__nersc_2gaussran_8c.html  displacement__test__nersc_2gaussran_8c_source.html  files.js  get__alm__fullcorr__20120120_8c.html  globals_0x62.html  globals_0x65.html  globals_0x68.html  globals_0x6c.html  globals_0x72.html  globals_defs.html  globals_func.js  globals_func_0x62.html  (+70 more)
algebra/include/: memutils.h  midapack.h
algebra/latex/: butterfly_8c.tex  common_2communication_8c.tex  common_2distribute__wigner_8c.tex  common_2remapping__routines_8c.tex  communication__ext_8c.tex  dir_96f87f081db03cfad979ed32056ab637.tex  dir_a59f438bf73ac9ad1cd2df601a7bbed1.tex  dir_d7d065e17e0da2dff133728a1da14cc0.tex  dir_d99042e9449d4a45ab9103cb51e01429.tex  displacement__test__nersc_2gaussran_8c.tex  files.tex  io__routines_8c.tex  main__lens2hat__ext__opt_8c.tex  main__lens2hat__ext__opt__disp_8c.tex  main__lens2hat__fullcorr_8c.tex  mapmat_8c.tex  nersc_2gaussran_8c.tex  old_2param__reader__20121302_2param__reader__hopper_8c.tex  page_install.tex  param__reader__parse_8c.tex  remapping__routines__2grid__apost_8c.tex  remapping__routines__apriori_8c.tex  rng_2derivatives_2remapping__routines__der_8c.tex  rng_2no__sprng_2main__lens2hat__titane_8c.tex  rng_2test__param__reader_2get__alm_8c.tex  sect_bugreporting.tex  src_2common_2param__reader__hopper_8c.tex  src__rng_2test__param__reader_2param__reader__hopper2_8c.tex  todo.tex  toeplitz__devtools_8c.tex  toeplitz__gappy_8c.tex  toeplitz__gappy__seq_8dev_8c.tex  toeplitz__rshp_8c.tex  toeplitz__seq_8c.tex  toeplitz__wizard_8c.tex  write__healpix__map__20120118_8c.tex
algebra/src/: CMakeLists.txt
libmidapack/: CMakeLists.txt  midapack.dox  mydoxfile1.8.txt
libmidapack/html/: bitop_8c_source.html  cindex_8c.js  cindex_8c_source.html  common_2get__cls_8c.html  common_2noise_8c.html  common_2noise_8c.js  common_2remapping__routines_8c.js  common_2write__cls_8c.js  common_2write__cls_8c_source.html  common_2write__healpix__fits_8c.js  common_2write__healpix__map_8c_source.html  communication__ext_8c_source.html  convolution__mpi_8c.html  convolution__mpi_8c.js  derivatives__nersc_2gaussran_8c.html  derivatives__nersc_2get__alm_8c_source.html  derivatives__nersc_2lensing__sub_8c.html  derivatives__nersc_2main__lens2hat__der_8c.js  derivatives__nersc_2noise_8c.js  derivatives__nersc_2noise_8c_source.html  derivatives__nersc_2param__reader_8c.html  derivatives__nersc_2write__healpix__map_8c.js  derivatives__nersc_2write__healpix__map_8c_source.html  dir_96f87f081db03cfad979ed32056ab637.html  dir_d206cab9e8e7697e0a5db818fc489fba.html  displacement__test__nersc_2get__alm_8c.html  displacement__test__nersc_2get__alm_8c_source.html  displacement__test__nersc_2remapping__routines__apost_8c_source.html  disptestnew_8c.html  disptestnew_8c_source.html  example.html  files.html  functionnality.html  get__alm__cls__20121302_8c.html  get__alm__fullcorr__20120120_8c.js  get__alm__fullcorr__20120120_8c_source.html  globals_0x64.html  globals_0x71.html  globals_func_0x63.html  globals_vars.html  (+67 more)
libmidapack/include/: midapack.h
libmidapack/latex/: cindex_8c.tex  convolution__ker__L_8c.tex  convolution__subroutines_8c.tex  csort_8c.tex  derivatives__nersc_2get__alm_8c.tex  derivatives__nersc_2get__cls_8c.tex  derivatives__nersc_2lensing__sub_8c.tex  derivatives__nersc_2noise_8c.tex  derivatives__nersc_2param__reader_8c.tex  derivatives__nersc_2remapping__routines__der_8c.tex  derivatives__nersc_2write__cls_8c.tex  derivatives__nersc_2write__healpix__map_8c.tex  dir_5f072d072c5e8f3d3469934807a839e1.tex  dir_aef67e3e4769f69e7caf56db0e8a1f45.tex  dir_d206cab9e8e7697e0a5db818fc489fba.tex  dir_ec1fa73d4fce8ec579def042c88b8e19.tex  doxygen.sty  main__lens2hat__lmaxp__2gridMC_8c.tex  main__lens2hat__lmaxp__2grid__smoothtest_8c.tex  midapack_8dox.tex  mkdoc_8dox.tex  nersc_2get__alm_8c.tex  no__sprng_2main__lens2hat__a2m2a_8c.tex  no__sprng_2main__lens2hat__titane_8c.tex  param__reader__new__a2m2a_8c.tex  plot__ker_8c.tex  remapping__routines__ext_8c.tex  rng_2common_2gaussran_8c.tex  rng_2common_2get__cls_8c.tex  rng_2common_2noise_8c.tex  rng_2common_2remapping__routines_8c.tex  rng_2derivatives_2communication__der_8c.tex  rng_2derivatives_2main__lens2hat__der_8c.tex  rng_2disptest_2remapping__routines__apost_8c.tex  rng_2test__param__reader_2gaussran_8c.tex  sect_team.tex  src_2common_2param__reader__hopper2_8c.tex  toeplitz__params_8c.tex  toeplitz__utils_8c.tex
libmidapack/src/: CMakeLists.txt
mappraiser/: CMakeLists.txt  createToeplitz.c
mappraiser/cmake/: FindCFITSIO.cmake  FindMIDAPACK.cmake
mappraiser/dev/: testwrite.c
mappraiser/examples/: CMakeLists.txt  so_sim_mappraiser.py  toast_so_sim.py
(+1748 files in other folders)
